--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-yandex-maps": "^4.6.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
