--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.22.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.25.0",
     "node-sass": "4.14",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
